--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,4 +11,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: taiki-e/create
+      - uses: taiki-e/create-gh-relea
