--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,4 +11,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: taiki-e/create-gh-release-act
+      - uses: taiki-e/create-gh-release-action@v1
+  
