--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,4 +12,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: taiki-e/create-gh-release-action@v1
-        wit
+        with:
+   
