--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,4 +14,4 @@ jobs:
       - uses: taiki-e/create-gh-release-action@v1
         with:
           # (optional) Path to changelog.
-          
+          changelog: CHAN
