Migrate Danger to Circleci

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,4 +15,5 @@ jobs:
         with:
           # (optional) Path to changelog.
           changelog: CHANGELOG.md
-          # (required) GitHub token for creating GitHub Releases
+          # (required) GitHub token for creating GitHub Releases.
+      
