ALSA: hda - Add new GPU codec ID to snd-hda

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,3 +17,5 @@ jobs:
           changelog: CHANGELOG.md
           # (required) GitHub token for creating GitHub Releases.
           token: ${{ secrets.GITHUB_TOKEN }}
+
+  upl
