Removed unused class.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,4 +28,5 @@ jobs:
           - windows-latest
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/ch
+      - uses: actions/checkout@v4
+ 
