--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -32,4 +32,5 @@ jobs:
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
           # (required) Comma-separated list of binary names (non-extension portion of filename) to build and upload.
-          # Note that glob pattern is not supported y
+          # Note that glob pattern is not supported yet.
+ 
