--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,4 +35,5 @@ jobs:
           # Note that glob pattern is not supported yet.
           bin: epistemology
           zip: all
-          # (required) GitHub token for uploading assets to GitHub Rele
+          # (required) GitHub token for uploading assets to GitHub Releases.
+     
