--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,12 @@
 [package]
 name = "epistemology"
 version = "0.5.0"
+edition = "2021"
+description = "A simple and clear way of hosting llama.cpp as a private HTTP API"
+license = "MIT"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
+actix-cors = "0.6.5"
+actix-files = "0.6.2"
