--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,14 @@ license = "MIT"
 [dependencies]
 actix-cors = "0.6.5"
 actix-files = "0.6.2"
+actix-tls = { version = "3.0.0-rc.2" }
+actix-web = {version="4.4.1", features=["rustls"]}
+anyhow = "1.0.79"
+clap = { version = "4.4.12", features = ["derive"] }
+futures = "0.3.30"
+gbnf = "0.1.1"
+rcgen = "0.12.1"
+reqwest = { version = "0.12.4", features = ["blocking","json"] }
+rustls = "0.20"
+rustls-pemfile = "2.0.0"
+serde = { version = "1.0", features = ["derive"] }
