--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,6 @@ reqwest = { version = "0.12.4", features = ["blocking","json"] }
 rustls = "0.20"
 rustls-pemfile = "2.0.0"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1"
+tokio = "1.35.1"
+tokio-stream = "0.1.14"
